--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -6,6 +6,9 @@
 </head>
 <body>
 <h1>{{ titulo }}</h1>
+<h4>URL: {{ URL }}</h4>
+<h4>IP: {{ IP }}</h4>
+<h4>Puerto: {{ puerto }}</h4>
 <h4> <a href="http://localhost:8000/api/sensor/">sensores</a></h4>
 <h4> <a href="http://localhost:8000/api/actuador/">actuadores</a></h4>
 <h4> <a href="http://localhost:8000/api/lectura/">lecturas</a></h4>
