--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -5,10 +5,11 @@
     <title>IoT</title>
 </head>
 <body>
-<h1>{{ titulo }}</h1>
+<h1>Datos de internet:</h1>
 <h4>URL: {{ URL }}</h4>
 <h4>IP: {{ IP }}</h4>
 <h4>Puerto: {{ puerto }}</h4>
+<h1>{{ titulo }}</h1>
 <h4> <a href="http://localhost:8000/api/sensor/">sensores</a></h4>
 <h4> <a href="http://localhost:8000/api/actuador/">actuadores</a></h4>
 <h4> <a href="http://localhost:8000/api/lectura/">lecturas</a></h4>
